force-app/main/default/objects/Portfolio__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <label>Full Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>