force-app/main/default/objects/Portfolio__c/fields/MobileNo__c.field-meta.xml
<CustomField>
    <fullName>MobileNo__c</fullName>
    <label>Mobile No.</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>