force-app/main/default/objects/Portfolio__c/fields/SalesforceCertifications__c.field-meta.xml
<CustomField>
    <fullName>SalesforceCertifications__c</fullName>
    <label>Salesforce Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>AI Associate</fullName>
            </value>
            <value>
                <fullName>AI Specialist</fullName>
            </value>
            <value>
                <fullName>Application Architect</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>B2B Solution Architect</fullName>
            </value>
            <value>
                <fullName>B2C Commerce Architect</fullName>
            </value>
            <value>
                <fullName>B2C Commerce Developer</fullName>
            </value>
            <value>
                <fullName>B2C Solution Architect</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Catalyst Specialist</fullName>
            </value>
            <value>
                <fullName>CPQ Specialist</fullName>
            </value>
            <value>
                <fullName>CRM Analytics and Einstein Discovery Consultant</fullName>
            </value>
            <value>
                <fullName>Data Architect</fullName>
            </value>
            <value>
                <fullName>Data Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Development Lifecycle and Deployment Architect</fullName>
            </value>
            <value>
                <fullName>Education Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Experience Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Field Service Consultant</fullName>
            </value>
            <value>
                <fullName>Heroku Architect</fullName>
            </value>
            <value>
                <fullName>Hyperautomation Specialist</fullName>
            </value>
            <value>
                <fullName>Identity and Access Management Architect</fullName>
            </value>
            <value>
                <fullName>Industries CPQ Developer</fullName>
            </value>
            <value>
                <fullName>Integration Architect</fullName>
            </value>
            <value>
                <fullName>JavaScript Developer I</fullName>
            </value>
            <value>
                <fullName>Marketing Associate</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Account Engagement Consultant</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Account Engagement Specialist</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>